--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
     <!-- =====================Explore Our Collections end===================== -->
 
     <!-- =====================Modern Living start======================= -->
-    <section class="py-5" style="background: #2D18170A;">
+    <section class="py-5 mb-5" style="background: #2D18170A;">
         <div class="container">
-            <div class="row g-4">
+            <div class="row g-lg-5 g-4">
                 <div class="col-xl-8 col-lg-7">
-                    <div class="h-100 w-100 d-flex gap-2 justify-content-center align-items-start flex-column">
+                    <div class="h-100 w-100 pe-lg-5 d-flex gap-2 justify-content-center align-items-start flex-column">
                         <h1 class="fw-normal fs-2 fm-forum text-dark">Modern Living</h1>
                         <p class="fw-normal fs-6 fm-lato text-dark">Transform your living space into a sanctuary of
                             contemporary elegance. Our curated collection blends cutting-edge design with uncompromising
@@ -139,7 +139,8 @@
                 </div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="w-100 rounded-3 overflow-hidden" style="height: 472px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/modernLiving.png" alt="Modern Living">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/modernLiving.png"
+                            alt="Modern Living">
                     </div>
                 </div>
             </div>
@@ -147,6 +148,147 @@
     </section>
     <!-- =====================Modern Living end======================= -->
 
+
+    <!-- =====================Restful Retreat start======================= -->
+    <section class="py-5" style="background: #2D18170A;">
+        <div class="container">
+            <div class="row g-lg-5 g-4">
+                <div class="col-xl-4 col-lg-5">
+                    <div class="w-100 rounded-3 overflow-hidden" style="height: 472px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/restfullRetreat.png"
+                            alt="Modern Living">
+                    </div>
+                </div>
+                <div class="col-xl-8 col-lg-7">
+                    <div class="h-100 w-100 ps-lg-5 d-flex gap-2 justify-content-center align-items-start flex-column">
+                        <h1 class="fw-normal fs-2 fm-forum text-dark">Restful Retreat</h1>
+                        <p class="fw-normal fs-6 fm-lato text-dark">Design your perfect sanctuary with bedroom furniture
+                            that prioritizes both luxury and wellness. Every element is thoughtfully crafted to promote
+                            deep rest and rejuvenation in your personal haven.</p>
+                        <button class="btn text-white rounded-3 fw-bold fs-6 " style="background: #2D1817;">
+                            Shop Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ====================Restful Retreat end======================= -->
+
+    <!-- =========================Our Furniture Gallery start====================== -->
+    <section class="py-5">
+        <div class="container">
+            <h1 class="fs-2 fw-normal text-dark  fm-forum lh-base text-center">Our Furniture Gallery</h1>
+            <p class="fw-normal fs-6 fm-lato text-dark mb-5 lh-base text-center">Explore Our Gallery of Inspiring
+                Designs</p>
+            <div class="row g-4">
+                <div class="col-lg-4 col-xl-3 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery1.png" alt="Gallery Image 1">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-3 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery2.png" alt="Gallery Image 2">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-6 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery3.png" alt="Gallery Image 3">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-6 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery4.png" alt="Gallery Image 4">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-3 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery5.png" alt="Gallery Image 4">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-3 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery6.png" alt="Gallery Image 4">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =========================Our Furniture Gallery end====================== -->
+
+    <!-- ===============Elevate Your Space with Uncompromising Quality start==============  -->
+    <section class="py-5" style="background: #F7F6F6;">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-xl-6">
+                    <h1 class="fs-2 fw-normal text-dark  fm-forum lh-base">Elevate Your Space with Uncompromising
+                        Quality</h1>
+                    <p class="fw-normal fs-6 fm-lato text-dark mb-4 lh-base">Experience the epitome of furniture
+                        quality. Our products are meticulously crafted with an unwavering commitment to excellence. From
+                        the finest materials to expert craftsmanship, each piece embodies durability, comfort, and
+                        timeless style. Elevate your space with the assurance of exceptional quality and lasting beauty
+                    </p>
+                    <ul class="mb-4 ps-0">
+                        <li class="mb-2 d-flex align-items-center justify-content-start gap-2"><img
+                                style="height: 32px; width: 32px;" src="assets/images/checkmark.svg" alt=""> Experience
+                            Unparalleled Quality</li>
+                        <li class="mb-2 d-flex align-items-center justify-content-start gap-2"><img
+                                style="height: 32px; width: 32px;" src="assets/images/checkmark.svg" alt=""> Built to
+                            Last for Generations</li>
+                        <li class="mb-2 d-flex align-items-center justify-content-start gap-2"><img
+                                style="height: 32px; width: 32px;" src="assets/images/checkmark.svg" alt=""> Loved by
+                            Customers Worldwide</li>
+                        <li class="mb-2 d-flex align-items-center justify-content-start gap-2"><img
+                                style="height: 32px; width: 32px;" src="assets/images/checkmark.svg" alt=""> Superior
+                            Materials</li>
+                        <li class="d-flex justify-content-start align-items-center gap-2"><img
+                                style="height: 32px; width: 32px;" src="assets/images/checkmark.svg" alt=""> Crafted to
+                            Perfection</li>
+                    </ul>
+                    <button class="btn text-white rounded-3 fw-bold fs-6 " style="background: #2D1817;">
+                        Shop Now
+                    </button>
+                </div>
+                <div class="col-xl-6">
+                    <div class="elevated_space_image_side position-relative px-5">
+                        <div class="elevated_space_image_box ps-5 pe-4">
+                            <img class="img-fluid" src="assets/images/elevateSpace.png" alt="Elevate Your Space">
+                        </div>
+                        <div class="comentator bg-white rounded-3 shadow-sm p-2 position-absolute d-flex justify-content-center align-items-center flex-column"
+                            style=" left: 0;  top: 50px;">
+                            <div class="d-flex justify-content-start gap-3 align-items-center">
+                                <img style="height: 58px; width: 58px;" src="assets/images/shipper_images.png"
+                                    alt="Commentator">
+                                <div class="flex-shrink-0">
+                                    <h1 class="fs-6 fw-medium mt-2 mb-0 
+                                    fm-inter text-black-500">Mark Anderson</h1>
+                                    <p class=" fw-medium mb-0" style="font-size: 12px;  color: #A6A6A6;">Furniture
+                                        Craftsmanship</p>
+                                </div>
+                                <img style="height: 40px; width: 40px;" src="assets/images/messageIcon.svg" alt="Icon">
+                            </div>
+                        </div>
+                        <div class="effectmark position-absolute top-50  translate-middle-y" style="left: 40px;">
+                            <img src="assets/images/effect.svg" alt="">
+                        </div>
+                        <div class="comentator bg-white rounded-3 shadow-sm p-2 position-absolute d-flex justify-content-center align-items-center end-0 bottom-0">
+                            <div class="d-flex justify-content-start gap-3 align-items-center">
+                                <img style="height: 58px; width: 58px;" src="assets/images/circleCheck.svg">
+                                <div class="flex-shrink-0">
+                                    <h1 class="fs-6 fw-medium mt-2 mb-0 
+                                    fm-inter text-black-500">Mark Anderson</h1>
+                                    <p class=" fw-medium mb-0" style="font-size: 12px;  color: #A6A6A6;">Furniture
+                                        Craftsmanship</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ===============Elevate Your Space with Uncompromising Quality end==============  -->
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- bootstrap -->
