--- a/index.html
+++ b/index.html
@@ -272,14 +272,12 @@
                         <div class="effectmark position-absolute top-50  translate-middle-y" style="left: 40px;">
                             <img src="assets/images/effect.svg" alt="">
                         </div>
-                        <div class="comentator bg-white rounded-3 shadow-sm p-2 position-absolute d-flex justify-content-center align-items-center end-0 bottom-0">
+                        <div class="comentator bg-white rounded-3 shadow-sm p-3 position-absolute d-flex justify-content-center align-items-center end-0 bottom-0">
                             <div class="d-flex justify-content-start gap-3 align-items-center">
-                                <img style="height: 58px; width: 58px;" src="assets/images/circleCheck.svg">
+                                <img style="height: 24px; width: 24p3;" src="assets/images/circleCheck.svg">
                                 <div class="flex-shrink-0">
-                                    <h1 class="fs-6 fw-medium mt-2 mb-0 
-                                    fm-inter text-black-500">Mark Anderson</h1>
-                                    <p class=" fw-medium mb-0" style="font-size: 12px;  color: #A6A6A6;">Furniture
-                                        Craftsmanship</p>
+                                    <h1 class="fs-6 fw-medium mb-0 
+                                    fm-inter text-black-500">We think about every detail</h1>
                                 </div>
                             </div>
                         </div>
