pc version completed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
                 <!-- logo -->
-                <a href="#" class="logo d-block">
+                <a href="index.html" class="logo d-block">
                     <img src="assets/images/logo.svg" alt="Logo">
                 </a>
                 <!-- navigation bar -->
@@ -272,7 +272,8 @@
                         <div class="effectmark position-absolute top-50  translate-middle-y" style="left: 40px;">
                             <img src="assets/images/effect.svg" alt="">
                         </div>
-                        <div class="comentator bg-white rounded-3 shadow-sm p-3 position-absolute d-flex justify-content-center align-items-center end-0 bottom-0">
+                        <div
+                            class="comentator bg-white rounded-3 shadow-sm p-3 position-absolute d-flex justify-content-center align-items-center end-0 bottom-0">
                             <div class="d-flex justify-content-start gap-3 align-items-center">
                                 <img style="height: 24px; width: 24p3;" src="assets/images/circleCheck.svg">
                                 <div class="flex-shrink-0">
@@ -287,6 +288,50 @@
         </div>
     </section>
     <!-- ===============Elevate Your Space with Uncompromising Quality end==============  -->
+
+    <!--====================Upcoming Trade Show start====================  -->
+    <section class="py-5" style="background: #F7F6F6;">
+        <div class="container">
+            <h1 class="fs-2 fw-normal text-dark mb-5  fm-forum lh-base text-center">Upcoming Trade Show - 2025</h1>
+            <div class="d-flex justify-content-center align-items-center gap-4">
+                <div class="upcommingTradeLogoBox" style="max-width: 245px;">
+                    <img src="assets/images/dallasMarketLogo.png" alt="">
+                    <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center">June 18 - 24th, 2025 WTC 6262
+                        Dallas Market Center</p>
+                </div>
+                <div class="separatorBorder"></div>
+                <div class="upcommingTradeLogoBox" style="max-width: 245px;">
+                    <img src="assets/images/hPMKT_Logo.png" alt="">
+                    <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center">October 25 - 29th, 2025
+                        Plaza Suites 1-517</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--====================Upcoming Trade Show end====================  -->
+
+    <!-- =====================footer start===================== -->
+    <footer class="py-5">
+        <div class="container">
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="footerLogo">
+                    <img src="assets/images/logo.svg" alt="Footer Logo">
+                </div>
+
+            </div>
+            <div class="footerLinks d-flex justify-content-center align-items-center gap-5 mt-3">
+                <a href="#" class="text-dark">My Account</a>
+                <a href="#" class="text-dark">Trade Shows</a>
+                <a href="#" class="text-dark">About Us</a>
+                <a href="#" class="text-dark">Showroom</a>
+                <a href="contactUs.html" class="text-dark">Contact Us</a>
+            </div>
+            <!-- copywrite start -->
+            <div class="copywrite text-center mt-5">
+                <p class="text-dark mb-0 fs-6 fw-normal fm-noto">© 2025 Hinges Furniture. All rights reserved.</p>
+            </div>
+    </footer>
+    <!-- =====================footer end===================== -->
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- bootstrap -->
