some responsive updated

--- a/contactUs.html
+++ b/contactUs.html
@@ -76,8 +76,8 @@
     <!-- ==================contact information and contact form section start================== -->
     <section class="contactInformationSection py-5">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-12">
+            <div class="row g-lg-5 g-4">
+                <div class="col-lg-6 col-md-6 col-12">
                     <div class="contactInformation d-flex flex-column justify-content-center align-items-start gap-4 " style="max-width: 472px;">
                         <h2 class="text-dark fs-1 fw-normal fm-forum">Contact Us</h2>
                         <p class="text-dark fs-6 fw-normal fm-lato">Please submit your questions or comments via the form below, and we’ll respond within 24 hours.</p>
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12">
+                <div class="col-lg-6 col-md-6 col-12">
                     <div class="contactForm" style="max-width: 470px;">
                         <form action="#" method="POST" class="d-flex flex-column gap-3">
                             <input type="text" class="form-control" placeholder="Name" required>
@@ -115,6 +115,7 @@
 
 
 
+  
     <!-- =====================footer start===================== -->
     <footer class="py-5">
         <div class="container">
@@ -122,19 +123,19 @@
                 <div class="footerLogo">
                     <img src="assets/images/logo.svg" alt="Footer Logo">
                 </div>
-             
+
             </div>
-               <div class="footerLinks d-flex justify-content-center align-items-center gap-5 mt-3">
-                    <a href="#" class="text-dark">My Account</a>
-                    <a href="#" class="text-dark">Trade Shows</a>
-                    <a href="#" class="text-dark">About Us</a>
-                    <a href="#" class="text-dark">Showroom</a>
-                    <a href="#" class="text-dark">Contact Us</a>
-                </div>
-                <!-- copywrite start -->
-                <div class="copywrite text-center mt-5">
-                    <p class="text-dark mb-0 fs-6 fw-normal fm-noto">© 2025 Hinges Furniture. All rights reserved.</p>
-                </div>
+            <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-3 flex-wrap">
+                <a href="#" class="text-dark">My Account</a>
+                <a href="#" class="text-dark">Trade Shows</a>
+                <a href="#" class="text-dark">About Us</a>
+                <a href="#" class="text-dark">Showroom</a>
+                <a href="contactUs.html" class="text-dark">Contact Us</a>
+            </div>
+            <!-- copywrite start -->
+            <div class="copywrite text-center mt-5">
+                <p class="text-dark mb-0 fs-6 fw-normal fm-noto">© 2025 Hinges Furniture. All rights reserved.</p>
+            </div>
     </footer>
     <!-- =====================footer end===================== -->
     <!-- jQuery -->
