--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
                     </button>
                 </div>
                 <div class="col-xl-6">
-                    <div class="elevated_space_image_side position-relative px-5">
-                        <div class="elevated_space_image_box ps-5 pe-4">
+                    <div class="elevated_space_image_side position-relative px-md-5">
+                        <div class="elevated_space_image_box ps-md-5 pe-md-4">
                             <img class="img-fluid" src="assets/images/elevateSpace.png" alt="Elevate Your Space">
                         </div>
                         <div class="comentator bg-white rounded-3 shadow-sm p-2 position-absolute d-flex justify-content-center align-items-center flex-column"
@@ -269,7 +269,7 @@
                                 <img style="height: 40px; width: 40px;" src="assets/images/messageIcon.svg" alt="Icon">
                             </div>
                         </div>
-                        <div class="effectmark position-absolute top-50  translate-middle-y" style="left: 40px;">
+                        <div class="effectmark d-none d-md-block position-absolute top-50  translate-middle-y" style="left: 40px;">
                             <img src="assets/images/effect.svg" alt="">
                         </div>
                         <div
@@ -319,7 +319,7 @@
                 </div>
 
             </div>
-            <div class="footerLinks d-flex justify-content-center align-items-center gap-5 mt-3">
+            <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-3 flex-wrap">
                 <a href="#" class="text-dark">My Account</a>
                 <a href="#" class="text-dark">Trade Shows</a>
                 <a href="#" class="text-dark">About Us</a>
