--- a/contactUs.html
+++ b/contactUs.html
@@ -75,36 +75,36 @@
 
     <!-- ==================contact information and contact form section start================== -->
     <section class="contactInformationSection py-5">
-        <div class="container">
-            <div class="row g-lg-5 g-4">
+        <div class="container px-md-5">
+            <div class="row g-lg-5 g-4 px-lg-5">
                 <div class="col-lg-6 col-md-6 col-12">
-                    <div class="contactInformation d-flex flex-column justify-content-center align-items-start gap-4 " style="max-width: 472px;">
+                    <div class="contactInformation d-flex flex-column justify-content-center align-items-start gap-4 " >
                         <h2 class="text-dark fs-1 fw-normal fm-forum">Contact Us</h2>
-                        <p class="text-dark fs-6 fw-normal fm-lato">Please submit your questions or comments via the form below, and we’ll respond within 24 hours.</p>
+                        <p class="text-dark fs-20 fw-normal fm-lato">Please submit your questions or comments via the form below, and we’ll respond within 24 hours.</p>
                         <div class="d-flex flex-column gap-4">
-                            <div class="d-flex align-items-center gap-3">
+                            <div class="d-flex align-items-start gap-3" >
                                 <img style="height: 22px; width: 22px;" src="assets/images/property-location.svg" alt="Location Icon">
-                                <span class="text-dark fs-6 fw-normal fm-lato">Main Office, Showroom & Warehouse 11242 Indian Trail</span>
+                                <span class="text-dark fs-20 fw-normal fm-lato" style="margin-top: -8px;">Main Office, Showroom & Warehouse 11242 Indian Trail</span>
                             </div>
-                            <div class="d-flex align-items-center gap-3">
+                            <div class="d-flex align-items-start gap-3">
                                 <img style="height: 22px; width: 22px;" src="assets/images/mobile-chat.svg" alt="Phone Icon">
-                                <span class="text-dark fs-6 fw-normal fm-lato">214-484-9664</span>
+                                <span class="text-dark fs-20 fw-normal fm-lato" style="margin-top: -8px;">214-484-9664</span>
                             </div>                          
-                            <div class="d-flex align-items-center gap-3">
+                            <div class="d-flex align-items-start gap-3">
                                 <img style="height: 22px; width: 22px;" src="assets/images/subway_time-5.svg" alt="Time Icon">
-                                <span class="text-dark fs-6 fw-normal fm-lato">Monday to Friday: 9am– 5.30pm CST​</span>
+                                <span class="text-dark fs-20 fw-normal fm-lato" style="margin-top: -8px;">Monday to Friday: 9am– 5.30pm CST​</span>
                             </div>                          
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
-                    <div class="contactForm" style="max-width: 470px;">
-                        <form action="#" method="POST" class="d-flex flex-column gap-3">
+                    <div class="contactForm pt-2" >
+                        <form action="#" method="POST" class="d-flex flex-column gap-3 fs-6 fw-normal fm-lato">
                             <input type="text" class="form-control" placeholder="Name" required>
                             <input type="email" class="form-control" placeholder="Email" required>
                             <input type="text" class="form-control" placeholder="Subject" required>
                             <textarea class="form-control" rows="4" placeholder="Message" required style="resize: none;"></textarea>
-                            <button type="submit" class="btn bg-dark text-white">Send</button>
+                            <button type="submit" class="btn bg-dark text-white fw-medium py-2" style="font-size: 18px;">Send</button>
                         </form>
                     </div>
                 </div>
@@ -116,28 +116,35 @@
 
 
   
-    <!-- =====================footer start===================== -->
-    <footer class="py-5">
+     <!-- =====================footer start===================== -->
+    <footer class="py-5" style="border-top: 1px solid  #E5E5EA">
         <div class="container">
             <div class="d-flex justify-content-center align-items-center">
                 <div class="footerLogo">
                     <img src="assets/images/logo.svg" alt="Footer Logo">
                 </div>
-
             </div>
-            <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-3 flex-wrap">
-                <a href="#" class="text-dark">My Account</a>
-                <a href="#" class="text-dark">Trade Shows</a>
-                <a href="#" class="text-dark">About Us</a>
-                <a href="#" class="text-dark">Showroom</a>
-                <a href="contactUs.html" class="text-dark">Contact Us</a>
+            <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
+                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">My Account</a>
+                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">Trade Shows</a>
+                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">About Us</a>
+                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">Showroom</a>
+                <a href="contactUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Contact Us</a>
             </div>
             <!-- copywrite start -->
-            <div class="copywrite text-center mt-5">
+            <div class="copywrite text-center mt-4">
                 <p class="text-dark mb-0 fs-6 fw-normal fm-noto">© 2025 Hinges Furniture. All rights reserved.</p>
             </div>
     </footer>
     <!-- =====================footer end===================== -->
+
+     <!-- backto top button start -->
+    <button class="backToTopBtn  rounded-circle">
+       <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M6.4569 9.73276C6.17123 10.0327 6.18281 10.5074 6.48276 10.7931C6.78271 11.0788 7.25744 11.0672 7.5431 10.7672L6.4569 9.73276ZM12.5431 5.51724C12.8288 5.21729 12.8172 4.74256 12.5172 4.4569C12.2173 4.17123 11.7426 4.18281 11.4569 4.48276L12.5431 5.51724ZM12.5431 4.48276C12.2574 4.18281 11.7827 4.17123 11.4828 4.4569C11.1828 4.74256 11.1712 5.21729 11.4569 5.51724L12.5431 4.48276ZM16.4569 10.7672C16.7426 11.0672 17.2173 11.0788 17.5172 10.7931C17.8172 10.5074 17.8288 10.0327 17.5431 9.73276L16.4569 10.7672ZM12.75 5C12.75 4.58579 12.4142 4.25 12 4.25C11.5858 4.25 11.25 4.58579 11.25 5H12.75ZM11.25 19C11.25 19.4142 11.5858 19.75 12 19.75C12.4142 19.75 12.75 19.4142 12.75 19H11.25ZM7.5431 10.7672L12.5431 5.51724L11.4569 4.48276L6.4569 9.73276L7.5431 10.7672ZM11.4569 5.51724L16.4569 10.7672L17.5431 9.73276L12.5431 4.48276L11.4569 5.51724ZM11.25 5V19H12.75V5H11.25Z" fill="#ffffff"></path> </g></svg>
+    </button>
+    <!-- backto top button end -->
+
+    
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- bootstrap -->
