--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                             <div class="d-flex justify-content-start gap-3 align-items-center">
                                 <img style="height: 24px; width: 24p3;" src="assets/images/circleCheck.svg">
                                 <div class="flex-shrink-0">
-                                    <h1 class="fs-6 fw-medium mb-0 
+                                    <h1 class="fs-6 fw-normal mb-0 
                                     fm-inter text-black-500">We think about every detail</h1>
                                 </div>
                             </div>
@@ -290,18 +290,18 @@
     <!-- ===============Elevate Your Space with Uncompromising Quality end==============  -->
 
     <!--====================Upcoming Trade Show start====================  -->
-    <section class="py-5" style="background: #F7F6F6;">
-        <div class="container">
-            <h1 class="fs-2 fw-normal text-dark mb-5  fm-forum lh-base text-center">Upcoming Trade Show - 2025</h1>
-            <div class="d-flex justify-content-center align-items-center gap-4">
+    <section class="py-5" >
+        <div class="">
+            <h1 style="border-bottom: 1px solid  #E5E5EA" class="fs-2 fw-normal text-dark mb-5 pb-3  fm-forum lh-base text-center">Upcoming Trade Show - 2025</h1>
+            <div class="d-flex justify-content-center align-items-center gap-sm-4 gap-1 px-2">
                 <div class="upcommingTradeLogoBox" style="max-width: 245px;">
                     <img src="assets/images/dallasMarketLogo.png" alt="">
                     <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center">June 18 - 24th, 2025 WTC 6262
                         Dallas Market Center</p>
                 </div>
                 <div class="separatorBorder"></div>
-                <div class="upcommingTradeLogoBox" style="max-width: 245px;">
-                    <img src="assets/images/hPMKT_Logo.png" alt="">
+                <div class="upcommingTradeLogoBox pt-4" style="max-width: 209px;">
+                    <img class="mb-1" src="assets/images/hPMKT_Logo.png" alt="">
                     <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center">October 25 - 29th, 2025
                         Plaza Suites 1-517</p>
                 </div>
@@ -311,7 +311,7 @@
     <!--====================Upcoming Trade Show end====================  -->
 
     <!-- =====================footer start===================== -->
-    <footer class="py-5">
+    <footer class="py-5" style="border-top: 1px solid  #E5E5EA">
         <div class="container">
             <div class="d-flex justify-content-center align-items-center">
                 <div class="footerLogo">
@@ -319,19 +319,27 @@
                 </div>
 
             </div>
-            <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-3 flex-wrap">
-                <a href="#" class="text-dark">My Account</a>
-                <a href="#" class="text-dark">Trade Shows</a>
-                <a href="#" class="text-dark">About Us</a>
-                <a href="#" class="text-dark">Showroom</a>
-                <a href="contactUs.html" class="text-dark">Contact Us</a>
+            <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
+                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">My Account</a>
+                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">Trade Shows</a>
+                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">About Us</a>
+                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">Showroom</a>
+                <a href="contactUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Contact Us</a>
             </div>
             <!-- copywrite start -->
-            <div class="copywrite text-center mt-5">
+            <div class="copywrite text-center mt-4">
                 <p class="text-dark mb-0 fs-6 fw-normal fm-noto">© 2025 Hinges Furniture. All rights reserved.</p>
             </div>
     </footer>
     <!-- =====================footer end===================== -->
+
+    <!-- backto top button start -->
+    <button class="backToTopBtn  rounded-circle">
+       <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M6.4569 9.73276C6.17123 10.0327 6.18281 10.5074 6.48276 10.7931C6.78271 11.0788 7.25744 11.0672 7.5431 10.7672L6.4569 9.73276ZM12.5431 5.51724C12.8288 5.21729 12.8172 4.74256 12.5172 4.4569C12.2173 4.17123 11.7426 4.18281 11.4569 4.48276L12.5431 5.51724ZM12.5431 4.48276C12.2574 4.18281 11.7827 4.17123 11.4828 4.4569C11.1828 4.74256 11.1712 5.21729 11.4569 5.51724L12.5431 4.48276ZM16.4569 10.7672C16.7426 11.0672 17.2173 11.0788 17.5172 10.7931C17.8172 10.5074 17.8288 10.0327 17.5431 9.73276L16.4569 10.7672ZM12.75 5C12.75 4.58579 12.4142 4.25 12 4.25C11.5858 4.25 11.25 4.58579 11.25 5H12.75ZM11.25 19C11.25 19.4142 11.5858 19.75 12 19.75C12.4142 19.75 12.75 19.4142 12.75 19H11.25ZM7.5431 10.7672L12.5431 5.51724L11.4569 4.48276L6.4569 9.73276L7.5431 10.7672ZM11.4569 5.51724L16.4569 10.7672L17.5431 9.73276L12.5431 4.48276L11.4569 5.51724ZM11.25 5V19H12.75V5H11.25Z" fill="#ffffff"></path> </g></svg>
+    </button>
+    <!-- backto top button end -->
+
+
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- bootstrap -->
