--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
 </head>
 
 <body>
+    <!-- pre loader with logo start -->
+    <div class="preloader ">
+        <div class="d-flex h-100 w-100 justify-content-center align-items-center flex-column">
+            <div class="logoBox  ">
+                <img src="assets/images/logo.svg" alt="Logo">
+                <div class="spinner-border text-white" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- pre loader with logo end -->
     <!-- ======================header area start=================== -->
     <section class="header py-3 position-fixed top-0 start-0 w-100">
         <div class="container">
@@ -269,7 +281,8 @@
                                 <img style="height: 40px; width: 40px;" src="assets/images/messageIcon.svg" alt="Icon">
                             </div>
                         </div>
-                        <div class="effectmark d-none d-md-block position-absolute top-50  translate-middle-y" style="left: 40px;">
+                        <div class="effectmark d-none d-md-block position-absolute top-50  translate-middle-y"
+                            style="left: 40px;">
                             <img src="assets/images/effect.svg" alt="">
                         </div>
                         <div
@@ -290,9 +303,10 @@
     <!-- ===============Elevate Your Space with Uncompromising Quality end==============  -->
 
     <!--====================Upcoming Trade Show start====================  -->
-    <section class="py-5" >
+    <section class="py-5">
         <div class="">
-            <h1 style="border-bottom: 1px solid  #E5E5EA" class="fs-2 fw-normal text-dark mb-5 pb-3  fm-forum lh-base text-center">Upcoming Trade Show - 2025</h1>
+            <h1 style="border-bottom: 1px solid  #E5E5EA"
+                class="fs-2 fw-normal text-dark mb-5 pb-3  fm-forum lh-base text-center">Upcoming Trade Show - 2025</h1>
             <div class="d-flex justify-content-center align-items-center gap-sm-4 gap-1 px-2">
                 <div class="upcommingTradeLogoBox" style="max-width: 245px;">
                     <img src="assets/images/dallasMarketLogo.png" alt="">
@@ -335,7 +349,15 @@
 
     <!-- backto top button start -->
     <button class="backToTopBtn  rounded-circle">
-       <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M6.4569 9.73276C6.17123 10.0327 6.18281 10.5074 6.48276 10.7931C6.78271 11.0788 7.25744 11.0672 7.5431 10.7672L6.4569 9.73276ZM12.5431 5.51724C12.8288 5.21729 12.8172 4.74256 12.5172 4.4569C12.2173 4.17123 11.7426 4.18281 11.4569 4.48276L12.5431 5.51724ZM12.5431 4.48276C12.2574 4.18281 11.7827 4.17123 11.4828 4.4569C11.1828 4.74256 11.1712 5.21729 11.4569 5.51724L12.5431 4.48276ZM16.4569 10.7672C16.7426 11.0672 17.2173 11.0788 17.5172 10.7931C17.8172 10.5074 17.8288 10.0327 17.5431 9.73276L16.4569 10.7672ZM12.75 5C12.75 4.58579 12.4142 4.25 12 4.25C11.5858 4.25 11.25 4.58579 11.25 5H12.75ZM11.25 19C11.25 19.4142 11.5858 19.75 12 19.75C12.4142 19.75 12.75 19.4142 12.75 19H11.25ZM7.5431 10.7672L12.5431 5.51724L11.4569 4.48276L6.4569 9.73276L7.5431 10.7672ZM11.4569 5.51724L16.4569 10.7672L17.5431 9.73276L12.5431 4.48276L11.4569 5.51724ZM11.25 5V19H12.75V5H11.25Z" fill="#ffffff"></path> </g></svg>
+        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+                <path
+                    d="M6.4569 9.73276C6.17123 10.0327 6.18281 10.5074 6.48276 10.7931C6.78271 11.0788 7.25744 11.0672 7.5431 10.7672L6.4569 9.73276ZM12.5431 5.51724C12.8288 5.21729 12.8172 4.74256 12.5172 4.4569C12.2173 4.17123 11.7426 4.18281 11.4569 4.48276L12.5431 5.51724ZM12.5431 4.48276C12.2574 4.18281 11.7827 4.17123 11.4828 4.4569C11.1828 4.74256 11.1712 5.21729 11.4569 5.51724L12.5431 4.48276ZM16.4569 10.7672C16.7426 11.0672 17.2173 11.0788 17.5172 10.7931C17.8172 10.5074 17.8288 10.0327 17.5431 9.73276L16.4569 10.7672ZM12.75 5C12.75 4.58579 12.4142 4.25 12 4.25C11.5858 4.25 11.25 4.58579 11.25 5H12.75ZM11.25 19C11.25 19.4142 11.5858 19.75 12 19.75C12.4142 19.75 12.75 19.4142 12.75 19H11.25ZM7.5431 10.7672L12.5431 5.51724L11.4569 4.48276L6.4569 9.73276L7.5431 10.7672ZM11.4569 5.51724L16.4569 10.7672L17.5431 9.73276L12.5431 4.48276L11.4569 5.51724ZM11.25 5V19H12.75V5H11.25Z"
+                    fill="#ffffff"></path>
+            </g>
+        </svg>
     </button>
     <!-- backto top button end -->
 
